--- a/public/style.css
+++ b/public/style.css
@@ -6,28 +6,32 @@ body {
     height: 100%;
     font-size: 1.5rem;
     opacity: 0.60;
-    background: rgb(34,193,195);
-    background: linear-gradient(90deg, rgb(92, 104, 104) 0%, rgb(249, 171, 1) 100%);
-    
+    background: rgb(34, 193, 195);
+    background: linear-gradient(90deg, rgb(72, 193, 230) 0%, rgb(204, 184, 140) 100%);
+
 }
+
 ul {
     background-size: cover;
     padding: 6px;
     margin-top: 6rem;
 }
+
 li {
     padding: 0.4rem;
 }
+
 a {
-    color:rgb(5, 1, 1);
+    color: rgb(5, 1, 1);
     font-size: 1.9rem;
     font-style: oblique;
     font-weight: bold;
 }
+
 footer {
     position: fixed;
     bottom: 0;
     padding-bottom: 1rem;
-    
+
 
 }
