--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header.ejs') %>
 <header>
-  <h1>Liste des grandes capitales du monde</h1>
+  <h1>Liste des grandes capitales du monde.</h1>
 </header>
 <main>
   <ul>
